clusters/vollminlab-cluster/kyverno/kyverno/policies/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-standard-labels
  annotations:
    policies.kyverno.io/title: Require Standard Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: "Enforces presence of common labels: app, env, and category for all core workloads and namespaces."
    kyverno.io/enable-background: "true"
  labels:
    app: kyverno
    env: production
    category: security
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-labels-on-controllers
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - DaemonSet
              namespaceSelector:
                matchExpressions:
                  - key: kubernetes.io/metadata.name
                    operator: NotIn
                    values:
                      - kube-system
                      - default
      validate:
        message: "Required labels: app, env, category"
        pattern:
          metadata:
            labels:
              app: "?*"
              env: "?*"
              category: "?*"
          spec:
            template:
              metadata:
                labels:
                  app: "?*"
                  env: "?*"
                  category: "?*"
    - name: require-labels-on-pods-and-namespaces
      match:
        resources:
          kinds:
            - Pod
            - Namespace
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
          - resources:
              kinds:
                - Pod
              namespaces:
                - kyverno
              names:
                - "kyverno-migrate-resources-*"
      validate:
        message: "Required labels: app, env, category"
        pattern:
          metadata:
            labels:
              app: "?*"
              env: "?*"
              category: "?*"
