clusters/vollminlab-cluster/kyverno/kyverno/policies/require-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Audit
  rules:
    - name: require-limits
      match:
        resources:
          kinds:
            - Pod
            - Deployment
            - StatefulSet
            - DaemonSet
      skipBackgroundRequests: false
      validate:
        allowExistingViolations: false
        message: "All containers must have CPU/memory requests and limits."
        foreach:
          - list: "spec.template.spec.containers"
            pattern:
              resources:
                requests:
                  memory: "?*"
                  cpu: "?*"
                limits:
                  memory: "?*"
                  cpu: "?*"
