clusters/vollminlab-cluster/kyverno/kyverno/policies/restrict-hostpath.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-hostpath-usage
  annotations:
    policies.kyverno.io/title: Restrict hostPath Usage
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: "Disallow use of hostPath volumes outside system namespaces like kube-system, calico, and longhorn."
    kyverno.io/enable-background: "true"
  labels:
    app: kyverno
    env: production
    category: security
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-hostpath-except-system
      match:
        resources:
          kinds:
            - Deployment
            - StatefulSet
            - DaemonSet
      exclude:
        resources:
          namespaces:
            - kube-system
            - calico-system
            - longhorn-system
            - monitoring
            - tigera-operator
            - velero
      skipBackgroundRequests: false
      validate:
        message: "Using hostPath volumes is not allowed outside system namespaces."
        anyPattern:
          - spec:
              template:
                spec:
                  =(volumes): []
          - spec:
              template:
                spec:
                  volumes:
                    - =(hostPath): null
