clusters/vollminlab-cluster/kyverno/kyverno/policies/restrict-loadbalancer.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-loadbalancer-services
  annotations:
    policies.kyverno.io/title: Restrict LoadBalancer Services
    policies.kyverno.io/category: Network
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: "Only ingress-nginx-controller (ingress-nginx) and Harbor (harbor) may use type LoadBalancer."
    kyverno.io/enable-background: "true"
  labels:
    app: kyverno
    env: production
    category: security
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: block-lb-except-nginx
      match:
        resources:
          kinds:
            - Service
      exclude:
        resources:
          namespaces:
            - ingress-nginx
            - dmz
            - harbor
      validate:
        message: "Only ingress-nginx-controller in the ingress-nginx namespace may use Service type LoadBalancer. DMZ and Harbor namespaces are excluded."
        pattern:
          spec:
            type: ClusterIP
